# DQN-SpaceInvaders

./: pyproject.toml
data/checkpoints/best/: performance.npy
src/: main.py  utils.py
src/agent/: __init__.py  agent.py
src/conf/: config.yaml
src/enviroment/: __init__.py  atari_env.py
src/estimator/: __init__.py  maxq_estimator.py
src/networks/: __init__.py  q_network.py
