[tool.poetry]
name = "clp-invaders"
version = "0.1.0"
description = ""
authors = ["Daniel Ávila Vera <davera.017@gmail.com>"]
readme = "README.md"
packages = [{include = "clp_invaders"}]

[tool.poetry.dependencies]
python = "^3.11, < 3.13"
stable-baselines3 = {extras = ["extra"], version = "^2.0.0"}
dill = "^0.3.7"
tqdm = "^4.66.1"
scipy = "^1.11.2"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linters
[tool.flake8]
ignore = ["E226","E302","E41"]
max-line-length = 120
exclude = ["tests/*"]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = ["W503"]

[tool.black]
safe = true
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["src", "tests", "docs/scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
